--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -7,12 +7,15 @@
   background-color: #202020;
   grid-template-columns: repeat(3, 1fr);
   gap: 24px;
+  border: 1px solid #fff;
+  border-radius: 20px;
 }
 
 /* Country Card */
 .country-card {
   background: #202020;
   border-radius: 16px;
+  border: 1px solid darkkhaki;
   padding: 20px;
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
